# smedia_bot

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
bot/: Dockerfile  main.py
bot/config/: config.py
bot/database/: database.py
bot/handlers/: handlers.py
bot/models/: models.py
